Project2/system/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ProjectManagementAPI
  labels:
    app: pm-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-management-api
  template:
    metadata:
      labels:
        app: project-management-api
    spec:
      containers:
        - image: projectmanagementapi
          name: project-management-api
          ports:
            - containerPort: 8080
