Project2/system/postgres.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    app: postgres
spec:
  containers:
    - image: postgres
      name: postgres-container
      ports:
        - containerPort: 5432
          protocol: TCP
      volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: pgdata
      emptyDir: {}
