Project2/system/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: project-management-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
